--- a/index.html
+++ b/index.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= productName %></title>
-
     <meta charset="utf-8" />
     <meta
-      name="description"
-      content="<%= productDescription %>"
-    />
-    <meta
-      name="format-detection"
-      content="telephone=no"
-    />
-    <meta
-      name="msapplication-tap-highlight"
-      content="no"
-    />
-    <meta
       name="viewport"
-      content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons"
-      rel="stylesheet"
-      type="text/css"
+      content="width=device-width, initial-scale=1.0"
     />
   </head>
   <body>
